@@ -34,6 +34,10 @@ Experimental version released on January 16th, 2012.
 * Added support for a 'require.memory' property, to specify the minimum
   amount of physical memory needed by the test case to yield valid results.
 
+* PR bin/45690: Force an ISO-8859-1 encoding in the XML files generated by
+  atf-report so that invalid data in the output of test cases does not
+  mangle our report.
+
 
 Changes in version 0.14
 ***********************
